--- a/index.html
+++ b/index.html
@@ -33,41 +33,50 @@
 					<div class="row">
 						<h1>Home Page Settings</h1>
 				  	<div id="home-hero-layouts" class="form-group">
-					 	<label class="col-sm-2 control-label">Hero Layouts</label>
-					 	<label class="radio-inline">
-							<input type="radio" name="home-hero-layouts" value="grid" checked> Grid
-					 	</label>
-					 	<label class="radio-inline">
-							<input type="radio" name="home-hero-layouts" value="single"> Single (Full Width)
-					 	</label>
-					 	<label class="radio-inline">
-							<input type="radio" name="home-hero-layouts" value="hide"> Hide
-					 	</label>
+						 	<label class="col-sm-2 control-label">Hero Layouts</label>
+						 	<label class="radio-inline js-update-ui">
+								<input type="radio" name="home-hero-layouts" value="grid" data-req-name="home-hero-grid" checked> Grid
+						 	</label>
+						 	<label class="radio-inline js-update-ui">
+								<input type="radio" name="home-hero-layouts" value="single"  data-req-name="home-hero-single"> Single (Full Width)
+						 	</label>
+						 	<label class="radio-inline js-update-ui">
+								<input type="radio" name="home-hero-layouts" value="hide" data-req-name="home-hero-hide"> Hide
+						 	</label>
 				  	</div>
 			  	</div>
 			  	<div id="grid-setup" class="row">
-			  		<div class="form-group">
-			  			<label class="col-sm-2 control-label">Setup</label>
-						 	<label class="radio-inline">
-								<input type="radio" name="home-hero-layouts-setup" value="auto" checked> Auto
+			  		<div class="form-group" name="hero-setup-" data-hide-req="home-hero-hide">
+			  			<label class="col-sm-2 control-label">Hero Setup</label>
+						 	<label class="radio-inline js-update-ui">
+								<input type="radio" name="home-hero-layouts-setup" value="auto" data-req-name="home-setup-auto" checked> Auto
 						 	</label>
-						 	<label class="radio-inline">
-								<input type="radio" name="home-hero-layouts-setup" value="custom"> Custom
+						 	<label class="radio-inline js-update-ui">
+								<input type="radio" name="home-hero-layouts-setup" value="custom" data-req-name="home-setup-custom"> Custom
 						 	</label>
 				  	</div>
-		  	  	<div class="row">
-		  	  		<div id="home-hero-grid" class="row js-add-row" data-template="home-hero-grid-template"></div>
-			  		  <button type="button" class="btn btn-primary btn-sm btn-info js-add-row-trigger" name="home-hero-grid">Add row</button>
-		  	  	</div>
+				  	<div name="hero-repeaters">
+				  		<div class="row hide" data-show-req="home-hero-grid home-setup-custom">
+			  	  		<div id="home-hero-grid" class="row js-add-row" data-template="home-hero-grid-template"></div>
+				  		  <button type="button" class="btn btn-primary btn-sm btn-info js-add-row-trigger pull-right" name="home-hero-grid">Add row</button>
+			  	  	</div>
+			  	  	<div class="row hide" data-show-req="home-hero-single home-setup-custom">
+			  	  		<div id="home-hero-single" class="row js-add-row" data-template="home-hero-single-template"></div>
+				  		  <button type="button" class="btn btn-primary btn-sm btn-info js-add-row-trigger pull-right" name="home-hero-single">Add row</button>
+			  	  	</div>
+				  	</div>
 			  	</div>
 				</div>
 				<div class="form-horizontal">
 					<div class="row">
 					  <div class="form-group">
-						 <label for="inputEmail3" class="col-sm-2 control-label">Show Body Nav</label>
-						 <label class="checkbox-inline">
-							<input type="checkbox" id="inlineradio1" value="option1" checked>Yes
-						 </label>
+						 <label class="col-sm-2 control-label">Show Body Nav</label>
+						 	<label class="radio-inline">
+								<input type="radio" name="home-body-nav" value="yes" checked> Yes
+						 	</label>
+						 	<label class="radio-inline">
+								<input type="radio" name="home-body-nav" value="no"> No
+						 	</label>
 					  </div>
 				  </div>
 				</div>
@@ -84,9 +93,11 @@
 		 <div class="tab-pane" id="category">
 			<h1>Category Page Settings</h1>
 		 </div>
+		 
 		 <div class="tab-pane" id="product">
 			<h1>Product Page Settings</h1>
 		 </div>
+		 
 		 <div class="tab-pane" id="settings">settings</div>
 	  </div>
 
@@ -96,25 +107,37 @@
 	  <script id="code-output-template" type="text/x-handlebars-template">
 		  <div id="mobile_layout_settings"
 			  {{#if heroLayout}}data-hero_layout="{{heroLayout}}"{{/if}}
-			  {{#if heroLayoutSetup}}data-hero_layout_setup="{{heroLayoutSetup}}"{{/if}}>
+			  {{#if heroLayoutSetup}}data-hero_layout_setup="{{heroLayoutSetup}}"{{/if}}
+			  {{#if heroNum}}data-hero_num="{{heroNum}}"{{/if}}
+			  {{#if bodyNav}}data-body_nav="{{bodyNav}}"{{/if}}>
 		  </div>
 		</script>
 		<script id="home-hero-grid-template" type="text/x-handlebars-template">
-			<div class="form-group col-md-6">
-	    	<label for="exampleInputEmail1">Left Image</label>
-	    	<input type="email" class="form-control" id="exampleInputEmail1" placeholder="Left Image">
-	    	<label for="exampleInputEmail1">Left Title</label>
-	    	<input type="email" class="form-control" id="exampleInputEmail1" placeholder="Left Title">
-	    	<label for="exampleInputEmail1">Left Link</label>
-	    	<input type="email" class="form-control" id="exampleInputEmail1" placeholder="Left Link">
+			<div class="form-group col-md-6 hero">
+	    	<label>Left Image</label>
+	    	<input type="text" class="form-control" placeholder="Link to image">
+	    	<label>Left Title</label>
+	    	<input type="text" class="form-control" placeholder="Product title">
+	    	<label>Left Link</label>
+	    	<input type="text" class="form-control" placeholder="Link to product">
 	  	</div>
-	  	<div class="form-group col-md-6">
-	    	<label for="exampleInputEmail1">Right Image</label>
-	    	<input type="email" class="form-control" id="exampleInputEmail1" placeholder="Right Image">
-	    	<label for="exampleInputEmail1">Right Title</label>
-	    	<input type="email" class="form-control" id="exampleInputEmail1" placeholder="Right Title">
-	    	<label for="exampleInputEmail1">Right Link</label>
-	    	<input type="email" class="form-control" id="exampleInputEmail1" placeholder="Right Link">
+	  	<div class="form-group col-md-6 hero">
+	    	<label>Right Image</label>
+	    	<input type="text" class="form-control" placeholder="Link to image">
+	    	<label>Right Title</label>
+	    	<input type="text" class="form-control" placeholder="Product title">
+	    	<label>Right Link</label>
+	    	<input type="text" class="form-control" placeholder="Link to product">
+	  	</div>
+		</script>
+		<script id="home-hero-single-template" type="text/x-handlebars-template">
+			<div class="form-group hero">
+	    	<label>Image</label>
+	    	<input type="text" class="form-control" placeholder="Link to image">
+	    	<label>Title</label>
+	    	<input type="text" class="form-control" placeholder="Product title">
+	    	<label>Link</label>
+	    	<input type="text" class="form-control" placeholder="Link to product">
 	  	</div>
 		</script>
 
