--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		  <div class="tab-content">
 
 			 <div class="tab-pane active" id="home">
-				<div role="form">
+				<form role="form">
 					<div class="form-horizontal row">
 						<div class="col-sm-12">
 							<div class="row">
@@ -70,16 +70,30 @@
 						  	</div>
 					  	</div>
 					  	<div name="hero-repeaters" class="clearfix marg-btm hidden" data-hide-req="hero-setup-auto">
-					  		<div class="row">
+					  		<div class="row" data-hide-req="hero-hide">
 						  		<h4 class="col-sm-10 col-sm-offset-2">Add custom heroes</h4>
 						  	</div>
 					  		<div class="hidden" data-show-req="hero-tile hero-setup-custom">
 				  	  		<div id="hero-tile" class="js-add-row" data-template="hero-tile-template"></div>
-					  		  <button type="button" class="btn btn-primary btn-sm btn-info js-add-row-trigger pull-right" name="hero-tile">Add row</button>
+  			  	  		<div class="row">
+  			  	  			<div class="col-sm-8 col-sm-offset-2">
+  			  	  				<p><em>Total heroes:</em> <span class="hero-count"></span></p>
+  			  	  			</div>
+  		  	  				<div class="col-sm-2">
+  			  	  				<button type="button" class="btn btn-primary btn-sm btn-info js-add-row-trigger pull-right" name="hero-tile">Add row</button>
+  			  	  			</div>
+  			  	  		</div>
 				  	  	</div>
 				  	  	<div class="hidden" data-show-req="hero-single hero-setup-custom">
 				  	  		<div id="hero-single" class="js-add-row" data-template="hero-single-template"></div>
-					  		  <button type="button" class="btn btn-primary btn-sm btn-info js-add-row-trigger pull-right" name="hero-single">Add row</button>
+				  	  		<div class="row">
+				  	  			<div class="col-sm-8 col-sm-offset-2">
+				  	  				<p><em>Total heroes:</em> <span class="hero-count"></span></p>
+				  	  			</div>
+			  	  				<div class="col-sm-2">
+				  	  				<button type="button" class="btn btn-primary btn-sm btn-info js-add-row-trigger pull-right" name="hero-single">Add row</button>
+				  	  			</div>
+				  	  		</div>
 				  	  	</div>
 					  	</div>
 				  	</div>
@@ -104,7 +118,7 @@
 							<button type="button" class="btn btn-primary btn-lg js-convert-trigger">Get code</button>
 						</div>
 					</div>
-				</div>
+				</form>
 			 </div> <!-- #home -->
 
 			<div class="tab-pane" id="category">
@@ -133,9 +147,9 @@
 				</div>
 				<div class="col-sm-5 hero">
 		    	<label>Left Image</label>
-		    	<input name="hero-image" type="text" class="form-control" placeholder="Link to image">
+		    	<input name="hero-image" type="text" class="form-control" placeholder="Link to image" required>
 		    	<label>Left Title</label>
-		    	<input name="hero-title" type="text" class="form-control" placeholder="Product title">
+		    	<input name="hero-title" type="text" class="form-control" placeholder="Product title" required>
 		    	<label>Left Link</label>
 		    	<input name="hero-link"type="text" class="form-control" placeholder="Link to product">
 		  	</div>
