Change form to div

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		  <div class="tab-content">
 
 			 <div class="tab-pane active" id="home">
-				<form role="form">
+				<div role="form">
 					<div class="form-horizontal row">
 						<div class="col-sm-12">
 							<div class="row">
@@ -118,7 +118,7 @@
 							<button type="button" class="btn btn-primary btn-lg js-convert-trigger">Get code</button>
 						</div>
 					</div>
-				</form>
+				</div>
 			 </div> <!-- #home -->
 
 			<div class="tab-pane" id="category">
@@ -147,9 +147,9 @@
 				</div>
 				<div class="col-sm-5 hero">
 		    	<label>Left Image</label>
-		    	<input name="hero-image" type="text" class="form-control" placeholder="Link to image" required>
+		    	<input name="hero-image" type="text" class="form-control" placeholder="Link to image">
 		    	<label>Left Title</label>
-		    	<input name="hero-title" type="text" class="form-control" placeholder="Product title" required>
+		    	<input name="hero-title" type="text" class="form-control" placeholder="Product title">
 		    	<label>Left Link</label>
 		    	<input name="hero-link"type="text" class="form-control" placeholder="Link to product">
 		  	</div>
